--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "bundle/gundo"]
 	path = bundle/gundo
 	url = git@github.com:lfendy/gundo.vim.git
+[submodule "bundle/vim-scala"]
+	path = bundle/vim-scala
+	url = git@github.com:lfendy/vim-scala.git
