--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
 	url = git@github.com:lfendy/ctrlp.vim.git
+[submodule "bundle/tabular"]
+	path = bundle/tabular
+	url = git@github.com:lfendy/tabular
